--- a/my-first-project/src/app/hero/hero.component.html
+++ b/my-first-project/src/app/hero/hero.component.html
@@ -1,3 +1,17 @@
 <section class="hero-section">
-
+    <div class="titulo">
+           <div>
+            <p >
+                Descubre lo que Pet Friendly Tiene para ofrecerte a ti y a tu familia!
+                <br>Hasta 30% de descuentos
+                </p> 
+                <p></p>
+           </div>
+           <div>
+            <button class="btn btn-success" type="button">Ver Ofertas</button>
+           </div>
+    </div>
+    <div class="div-img">
+        <img src="assets/pug.png" alt="pug">
+    </div>
 </section>
