--- a/my-first-project/src/app/navbar/navbar.component.html
+++ b/my-first-project/src/app/navbar/navbar.component.html
@@ -32,16 +32,12 @@
         </div>
     </div>
     <div class="busqueda ">
-        <div class="container mt-3">
-            <div class="row justify-content-center">
-              <div class="col-md-6">
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-              </div>
-            </div>
-          </div>
+      <div >
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+        </div> 
     </div>
 
 </section>
