no vuelvo a dejar la tarea para ultima hora xD

--- a/my-first-project/src/app/cuerpo/cuerpo.component.html
+++ b/my-first-project/src/app/cuerpo/cuerpo.component.html
@@ -1,17 +1,17 @@
 <section class="contenedor">
     <div class="card col-3">
         <h4>Hola Mundo</h4>
-        <img class="h-75" src="assets/2.jpeg" alt="">
+        <img class="h-75 rounded" src="assets/2.jpeg" alt="">
 
     </div>
     <div class="card col-3">
         <h4>Hola Mundo</h4>
-        <img class="h-75" src="assets/1.jpeg" alt="">
+        <img class="h-75 rounded" src="assets/1.jpeg" alt="">
         
     </div>
     <div class="card col-3">
         <h4>Hola Mundo</h4>
-        <img class="h-75" src="assets/3.jpeg" alt="">
+        <img class="h-75 rounded" src="assets/3.jpeg" alt="">
     </div>
 
 </section>
