--- a/my-first-project/src/app/cuerpo/cuerpo.component.css
+++ b/my-first-project/src/app/cuerpo/cuerpo.component.css
@@ -10,7 +10,6 @@
     justify-content: center;
     align-items: center;
     height: 45vh;
-    background-color: #F8CADD;
-    color: white;
+    background-color: #D6EEF6;
     font-weight: bold;
 }
